my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EBREAK/EBREAK.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBREAK.dml:12:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBREAK.dml:14:5: error EBREAK: nothing to break from
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBREAK.dml:17:9: In m
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBREAK.dml:9:5: error EBREAK: nothing to break from
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBREAK.dml:17:9: In m
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBREAK.dml:9:5: error EBREAK: nothing to break from
